export const RESOURCE_GROUPS = {
    COMMON: 1,
    GENDER_DROPDOWN: 2,
    STUDENTS: 3,
    ERRORS: 4,
    SIGNIN: 5,
    DASHBOARD: 6,
    LANGUAGE: 7,
    KYC_DROPDOWN: 8,
    USER: 9,
    FORGOT_PASSWORD:10,
}

export const RESOURCE_FIELDS = {
    INFO_VALUE: <const>"InfoValue",
    IS_REQUIRED: <const>"IsRequired",
    MAX_LENGTH: <const>"MaxLength",
    MIN_LENGTH: <const>"MinLength",
    PLACEHOLDER: <const>"PlaceholderValue",
    KEY: <const>"ResourceKey",
    VALUE: <const>"ResourceValue",
    FIELD_TYPE: <const>"FieldType",
}

export const RESOURCE_CONSTANTS = {
    COMMON: {
        CANCEL: "Cancel",
        OK: "OK",
        YES:"YES",
        NO:"NO",
        DELETE_CONFIRMATION_MESSAGE: "DeleteConfirmationMessage",
        OTP_EXPIRED_MESSAGE: "OtpExpiredMessage",
        RESEND_OTP_TIME: "ResendOtpTime",
        RESEND_OTP: "ResendOtp",
        NO_INTERNET_TITLE: "NoInternetTitle",
        NO_INTERNET_DESCRIPTION: "NoInternetDescription",
        OTP: "OTP",
        ADMIN_OTP: "AdminOTP",
        STUDENTS: "Students",
        HOME: "Home",
        SUBMIT: "Submit",
        CONFIRM: "Confirm",
        SETTINGS: "Settings",
        LOGOUT: "Logout",
    },
    STUDENT: {
        DOB: "Dob",
        WEIGHT: "Weight",
        FIRST_NAME: "FirstName",
        MIDDLE_NAME: "MiddleName",
        LAST_NAME: "LastName",
        MOTHERS_NAME: "MothersName",
        AGE: "Age",
        GENDER: "Gender",
        PHONE_NUMBER: "PhoneNumber",
        ADDRESS_LINE1: "AddressLine1",
        ADDRESS_LINE2: "AddressLine2",
        STATE: "State",
        CITY: "City",
        PINCODE: "Pincode",
        SAVE: "Save",
        UPDATE: "Update",
        SELECT_GENDER: "SelectGender",
        MAX_LENGTH: "MaxLength",
        MIN_LENGTH: "MinLength",
        PATIENT: "Patient",
        INTERNET_CONNECTION: "InternetConnection",
        ADD_PATIENT: "AddPatient",
        STUDENT_SAVED: "StudentSave",
        DELETE: "Delete",
    },
   
    ERRORS: {
        FIELD_REQUIRED: "FieldRequired",
        FIELD_LIMIT: "FieldLimit",
        FIELD_INVALID: "FieldInvalid",
        STUDENT_SAVE_SUCCESS: "StudentSaveSuccess",
        STUDENT_UPDATE_SUCCESS: "StudentUpdateSuccess",
        UNAUTHORIZED_OPERATION: "UnauthorisedOperation",
        VALIDATION_ERROR: "ValidationError",
        ERROR_VIA_RETRIEVAL_DATA: "ErrorViaRetrievalData",
        ERROR_VIA_DATA_SAVE: "ErrorViaSaveData",
        ERROR_VIA_DATA_DELETE: "ErrorViaDeleteData",
        ERROR_VIA_DATA_SYNC: "ErrorViaSyncData",
        INVALID_IMAGE: "InvalidImage",
    },
    SIGN_IN: {
        SIGNIN: "SignIn",
        FORGOT_PASSWORD: "ForgotPassword",
        VALIDATE: "Validate",
        SMS_VALIDATION: "SMSValidation",
        WRONG_PASSCODE: "WrongPasscode",
        SET_PASSCODE: "SetPasscode",
        ENTER_PASSCODE: "EnterPasscode",
        CONFIRM_PASSCODE: "ConfirmPasscode",
        PASSCODE_REQUIRED: "PasscodeRequired",
        FORGOT_PASSCODE: "ForgotPasscode",
        FORGOT_PASSCODE_CONFIRMATION: "ForgotPasscodeConfirmation"
    },
    FORGOT_PASSWORD:{
        CREATE_NEW_ACCOUNT: "CreateNewAccount",
        PHONE: "Phone",
        ACCOUNT_PASSWORD: "AccountPassword",
        CONFIRM_PASSWORD: "ConfirmPassword",
        ALREADY_ACCOUNT:"AlreadyAccount",
        PHONE_LABEL:"PhoneLabel",
        PASSWORD_NOT_MATCH:"PasswordNotMatch",
        SET_NEW_PASSWORD:"SetNewPassword"
    },
    DASHBOARD: {
        WELCOME: "Welcome",
        RECENT_STUDENTS: "RecentStudents",
        SEE_ALL: "SeeAll",
        AVAILABLE_LANGUAGES: "AvailableLanguages",
    },
    LANGUAGRE: {
        CHANGE_LANGUAGE: "ChangeLanguage",
        LANGUAGES: "Languages",
    },
    KYC: {
        AADHAR_CARD: "AadharCard",
        PAN_CARD: "PanCard",
    },
    USER: {
        ACCOUNT_PASSWORD: "AccountPassword",
        CREATE_NEW_ACCOUNT: "CreateNewAccount",
        USER_PHOTO: "UserPhoto",
        CONFIRM_PASSWORD: "ConfirmPassword",
        EMAIL: "Email",
        KYC_TYPE: "KycType",
        KYC_ID: "KycID",
        KYC_DOCUMENT: "KycDocument",
        ADDRESS: "Address",
        FIRST_NAME: "FirstName",
        MIDDLE_NAME: "MiddleName",
        LAST_NAME: "LastName",
        MOTHERS_NAME: "MothersName",
        DATE_OF_BIRTH: "DateOfBirth",
        KYC_TYPE_KEY: "KycTypeKey",
        GENDER_KEY: "GenderKey",
        PHONE: "Phone",
        PASSWORD_NOT_MATCH:'PasswordNotMatch'
    },
};

export const CUSTOM_RESOURCE_CONSTANTS = {
    NO_INTERNET_TITLE: "No internet connection!",
    NO_INTERNET_DESCRIPTION: "Your device does not have internet connection, please try letter.",
    JAILBROKEN_TITLE: "This app cannot be run on rooted device",
    JAILBROKEN_DESCRIPTION: "This application does not support rooted device, please try with another device",
    REFRESH_BUTTON_LABEL: "Refresh",
    NO_LANGUAGE: "Please select language",
    SELECT_LANGUAGE: "Select language",
    SYNC_ERROR_TITLE: "Data Sync Error",
    SYNC_ERROR_DESCRIPTION: "Error occured at the time of data sync. Please try again after sometime.",
    RETRIEVAL_ERROR_TITLE: "Data Retrieval Error",
    RETRIEVAL_ERROR_DESCRIPTION: "Error occurred while retrieving data. Please try again after sometime.",
    NEXT: "Next"
}